--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                             <h3 id="card-vocab-back" class="text-3xl font-bold text-indigo-700 mb-1 font-heading">Vocab</h3>
                             <div class="flex justify-center gap-2 mb-2" onclick="event.stopPropagation()">
                                 <button id="btn-audio-back-slow" class="w-8 h-8 flex items-center justify-center bg-white border border-indigo-100 text-indigo-500 rounded-full hover:bg-indigo-50 transition shadow-sm text-xs">
-                                    <i class="fa-solid fa-tortoise"></i>
+                                    <span>0.5x</span>
                                 </button>
                                 <button id="btn-audio-back-normal" class="w-8 h-8 flex items-center justify-center bg-indigo-500 text-white rounded-full hover:bg-indigo-600 transition shadow-sm text-xs">
                                     <i class="fa-solid fa-volume-high"></i>
