--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
         </div>
 
-        <div class="perspective-1000 w-full max-w-2xl aspect-[4/5] md:aspect-[16/10]">
+        <div class="perspective-1000">
             <div id="flashcard" class="card-container group cursor-pointer relative">
 
                 <div class="card-face card-front absolute inset-0 group bg-white border-2 border-slate-100">
