--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="th" class="dark"> <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Super Flashcards</title>
+    <title>English Flashcards</title>
     
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -198,6 +198,6 @@
 
     </div>
     
-    <script type="module" src="script.js"></script>
+    <script type="module" src="app.js"></script>
 </body>
 </html>
