--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </span>
             </div>
 
-            <div class="perspective-container w-full max-w-[340px] aspect-[3/4.5] md:aspect-[3/4] max-h-[60vh]">
+            <div class="perspective-container w-full max-w-sm md:max-w-xl lg:max-w-2xl h-[65vh] min-h-[500px] max-h-[700px]">
                 <div id="flashcard" class="card-container w-full h-full">
                     
                     <div class="card-face card-front relative group">
