--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
                     </div>
 
                     <div class="w-full flex flex-col items-center gap-3 z-20">
-                        <div class="flex items-center gap-4" onclick="event.stopPropagation()">
-                            <button id="btn-audio-front-slow" class="w-12 h-12 rounded-full bg-white dark:bg-slate-700 hover:bg-slate-50 dark:hover:bg-slate-600 text-primary-500 font-bold text-xs transition shadow-sm border border-slate-200 dark:border-slate-600 flex items-center justify-center">0.5x</button>
+                        <div class="flex items-center gap-6" onclick="event.stopPropagation()">
+                            <button id="btn-audio-front-slow" class="w-16 h-16 rounded-full bg-white dark:bg-slate-700 hover:bg-slate-50 dark:hover:bg-slate-600 text-primary-500 font-bold text-xl transition shadow-sm border border-slate-200 dark:border-slate-600 flex items-center justify-center">0.5x</button>
                             
                             <button id="btn-audio-front-normal" class="w-16 h-16 bg-slate-50 dark:bg-slate-800 border-2 border-slate-100 dark:border-slate-700 hover:border-primary-400 hover:text-primary-500 rounded-full flex items-center justify-center text-slate-400 transition-all active:scale-95 shadow-md">
                                 <i class="fa-solid fa-volume-high text-2xl"></i>
